# batchy

./: Cargo.toml  LICENSE  README.md
src/: batcher.rs  common.rs  lib.rs  sync_batcher.rs
